# recs2025

./: .gitignore  README.md  hello.py  init_repo.py  pyproject.toml
cdae/model/: CDAE.py  utils.py
data_utils/: constants.py  data_dir.py  split_data.py  utils.py
leon/: README_LEON.md  SVDCalculator.py  create_embeddings.py
training_pipeline/: data_module.py  metric_aggregator.py  task_constructor.py  train.py  train_runner.py
