[project]
name = "recs2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "ipykernel>=6.29.5",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.1",
    "neptune>=1.13.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "pytorch-lightning>=2.5.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "ruff>=0.9.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchmetrics>=1.7.0",
    "tqdm>=4.67.1",
]
